--- a/peopleSearch-SPA/src/app/person/person.component.html
+++ b/peopleSearch-SPA/src/app/person/person.component.html
@@ -1,3 +1,7 @@
-<p>
-  person works!
+<p *ngFor="let person of persons">
+  {{person.id}}. {{person.firstName}} {{person.lastName}}
+  {{person.address}} {{person.city}}, {{person.state}} {{person.zip}}
+  
 </p>
+
+<p>another test</p>
