--- a/peopleSearch-SPA/src/app/app.component.html
+++ b/peopleSearch-SPA/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+<app-navbar></app-navbar>
   <h1>
     Person Search
   </h1>
-</div>
 
+<app-person></app-person>
