--- a/peopleSearch-SPA/src/app/navbar/navbar.component.html
+++ b/peopleSearch-SPA/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
   </ul>
   <!-- ngSubmit at form level and not button level -->
   <form  #searchForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="search()">
-    <input class="form-control mr-sm-2" type="text" name="searchname" placeholder="Name to Search" [(ngModel)]="model.searchname" >
+    <input class="form-control mr-sm-2" type="text" name="searchname" placeholder="Name to Search" [(ngModel)]="textValue">
     <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
   </form>
   
