--- a/peopleSearch-SPA/src/app/navbar/navbar.component.html
+++ b/peopleSearch-SPA/src/app/navbar/navbar.component.html
@@ -11,3 +11,17 @@
   </form>
   
 </nav>
+
+<div class="container">
+    <div class="row">
+        <div *ngFor="let person of persons" class="col-lg-2 col-md-3 col-sm-6">
+            <app-member-card [person]=person></app-member-card>
+  
+        </div>
+  
+    </div>
+  
+  
+  
+  </div>
+  
