--- a/peopleSearch-SPA/src/app/navbar/navbar.component.html
+++ b/peopleSearch-SPA/src/app/navbar/navbar.component.html
@@ -12,10 +12,10 @@
   
 </nav>
 
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div *ngFor="let person of persons" class="col-lg-2 col-md-3 col-sm-6">
-            <app-member-card [person]=person></app-member-card>
+            <app-person-card [person]=person></app-person-card>
   
         </div>
   
