--- a/peopleSearch-SPA/src/app/person-card/person-card.component.html
+++ b/peopleSearch-SPA/src/app/person-card/person-card.component.html
@@ -1,11 +1,12 @@
-<div class="card mb-4">
+<div class="card mb-1 mt-1">
     <div class="card-img-wrapper">
         <img class="card-img-top" src="{{person.photoUrl}}" alt="{{person.firstname}}">
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1"><i class="fa fa-user"></i>{{person.firstname}} {{person.lastname}} 
-          {{'Age:'+age}}
+          {{'Age:'+age}} 
         </h6>
+        <p class="card-text text-muted text-center">{{person.address}}, {{person.city}} {{person.state}}</p>
     </div>
 
 </div>
